[package]
name = "wall-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.43", features = ["derive"] }
daemonize = "0.5.0"
reqwest = { version = "0.12.7", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
url = "2.5.2"
signal-hook = "0.3.17"
libc = "0.2.158"

[[bin]]
name = "wall-updater-daemon"
path = "src/daemon_main.rs"

[[bin]]
name = "wall-updater"
path = "src/main.rs"
